# lillama

./: README.md  lillama.ipynb  pyproject.toml  reqmnts.txt  requirements.txt  setup.py
src/: stable_rank.py  utils.py
src/data/: alpaca.py  base.py  dataiterator.py  parse_args.py  sharegpt.py  wikitext.py
src/evaluation/: benchmark_throuput.py  custom.py  eval_ppl.py  gen.py  llm_pruner_speedup.py  lm_eval.py  lm_eval_harness.py  load_lr_llm.py  speedup.py
src/lillama/: config.py  distiller.py  distiller_2.py  finetune.py  finetune_deepspeed.py  finetune_deepspeed_ift.py  finetune_phi.py  finetune_subset.py  gpu_utils.py  knowledge_distillation.py  lowrank_llm.py  main.py  pca_init.py  scratch_finetuning.py  scratch_finetuning_mistral.py  search_ranks.py  stable_rank.py  train.py
src/model/: config.json  configuration_low_rank_llama.py  configuration_mixtral.py  inkubalm.py  modeling_low_rank_llama.py  modeling_low_rank_mixtral.py  modeling_mixtral.py
